<resources>
    <string name="app_name">DrugBank</string>

    <string name="account">Account</string>
    <string name="servers">Servers</string>
    <string name="search">Search</string>
    <string name="billing">Billing</string>


    <string name="default_notify_title">Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Login Screen -->
    <string name="login_phone_number_hint">PhoneNumber</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_text"><u>Forgot password?</u></string>
    <string name="login_btn">Login</string>
    <string name="login_with_text">Or, login with</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_sign_up_btn">Sign Up</string>

    <!-- Sign up Screen -->
    <string name="sign_up_first_name_hint">First Name</string>
    <string name="sign_up_last_name_hint">Last Name</string>
    <string name="sign_up_phone_number_hint">Phone Number</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_doctor_code_hint">Doctor Code</string>
    <string name="sign_up_btn">Register</string>
    <string name="sign_up_with_text">Or, sign up with</string>
    <string name="sign_up_have_account_text">Already have an account?</string>
    <string name="sign_up_Login_btn">Login</string>

    <string name="health_care">Health Care</string>


    <string name="home_title">Home</string>
    <string name="schedule_title">Schedule</string>
    <string name="chat_title">Chat</string>
    <string name="info_title">Info</string>

    <string name="default_web_client_id">448679009081-b1mugi9il2et4advljg6a3vh1pkm0rhl.apps.googleusercontent.com</string>
    <string name="sign_up_password_confirm_hint">Confirm password</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="default_user_name">User</string>
    <string name="team_name">-Ongtrumandroid-</string>
    <string name="app_name_and_version">Health Care version 0.0.1</string>
    <string name="dob_hint">dd/mm/yyy</string>

    <!--    biometric authentication-->
    <string name="biometric_authentication_title">Biometric Authentication</string>
    <string name="biometric_authentication_subtitle">Log in using </string>
    <!--    <string name="biometric_authentication_error">Authentication error: </string>-->
    <!--    <string name="biometric_authentication_succeeded">Authentication succeeded!</string>-->
    <!--    <string name="biometric_authentication_failed">Authentication failed</string>-->
    <string name="biometric_support_unavailable">Biometric authentication is not available on this device</string>
    <string name="biometric_currently_unavailable">Biometric authentication is currently unavailable</string>
    <string name="biometric_enrollment_unavailable">Biometric enrollment is currently not available on this device</string>

    <!--  services notification  -->
    <string name="default_notification_channel_id">chanel id</string>
    <string name="fcm_message">fcm_message</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="for_patient">
        "Chúng tôi lấy tiền của bạn \n\n \n\n"

        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"


    </string>

    <string name="role_of_healthbooking">
        "Vai trò của chúng tôi là lấy tiền của bạn \n\n \n\n"

        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"


    </string>


    <string name="sampleState">
The main active ingredient in ibandronate medications is ibandronate sodium. This compound plays a crucial role in binding to bone tissue, where it acts to inhibit bone resorption, ultimately leading to increased bone density and reduced fracture risk.
    </string>


    <string name="sampleDescription">
Ibandronate, sold under various brand names, is a pharmaceutical compound used to strengthen bones and prevent fractures associated with osteoporosis. It functions by slowing down the breakdown of bone tissue, leading to improved bone density and strengt
    </string>


    <string name="sampleclinical">
Ibandronate is a bisphosphonate medication primarily prescribed to treat osteoporosis and prevent bone fractures, especially in postmenopausal women. It works by inhibiting bone resorption, thereby increasing bone density and reducing the risk of fracture
    </string>

    <string name="sampleSimpleDescription">
Ibandronate is a medicine that helps make bones stronger and less likely to break. It is often prescribed for people with osteoporosis, a condition where bones become weak and fragile. By slowing down the process of bone breakdown, it helps prevent fractu
    </string>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_test_ui">TestUi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="search_nav">Search</string>
    <string name="user_manager_nav">User Manager</string>
    <string name="record_nav">Record</string>
    <string name="drugstore_nav">Drugstore</string>
    <string name="setting_nav">Setting</string>

    <string name="KEY_API">AIzaSyAs1cvby4JEuW96Vx-AGVNg_H4a5HM5uSM</string>


    <!--    Combobox-->
    <string-array name="RoleName">
        <item>ALL</item>
        <item>ADMIN</item>
        <item>SECRETARY</item>
    </string-array>

    <string-array name="RoleName_Create">
        <item>ADMIN</item>
        <item>SECRETARY</item>
    </string-array>

    <string-array name="aproval">
        <item>0</item>
        <item>1</item>
    </string-array>


    <string-array name="Gender">
        <item>ALL</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="Active">
        <item>ALL</item>
        <item>Active</item>
        <item>Deactivate</item>
    </string-array>


    <string-array name="Active_user_adapter">
        <item>Active</item>
        <item>Deactivate</item>
    </string-array>

    <string-array name="sortField_drug">
        <item>ID</item>
        <item>Name</item>
        <item>Type</item>
        <item>State</item>
        <item>Description</item>
        <item>Simple Description</item>
        <item>Clinical Description</item>
    </string-array>

    <string-array name="sortOrder">
        <item>ACS</item>
        <item>DESC</item>
    </string-array>

    <string-array name="sortByUser">
        <item>ACS</item>
        <item>DESC</item>
    </string-array>

    <string-array name="sorrField_product">
        <item>ID</item>
        <item>Labeller</item>
        <item>Name</item>
        <item>Route</item>
        <item>Pescription Name</item>
    </string-array>

    <string-array name="sortby_product_country">
        <item>FDA</item>
        <item>ANSM</item>
        <item>DAV</item>
    </string-array>


    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="API_KEy">AIzaSyBO9NPUBb7CW9a72f-96pj74fPZuz4uRrE</string>
    <string name="API_KEy_V2">AIzaSyAY9yOcF4oYl_ciOHD4HP_sPsXdxZltTs8</string>
    <string name="API_KEy_V3">AIzaSyCZ3VOC4_-mGyRiIWG6znnOu7hPakkPziU</string>

    <string name="headGn">288 Bis, Nguyễn Văn Cừ, phường An Hòa, quận Ninh Kiều, thành phố Cần Thơ</string>
    <string name="diadiemkinhdoanh">288 Bis, Nguyễn Văn Cừ, phường An Hòa, quận Ninh Kiều, thành phố Cần Thơ</string>
    <string name="tetlephone">(0292). 389 1433 - (0292). 3890802</string>
    <string name="loaihinhkinhdoanh">Medicine manufacturing enterprise</string>
    <string name="gmp">(1) 299/GCN-QLD (GMP); (2) 711//GCN-QLD (GMP)</string>



</resources>