<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:title="@string/search_nav"
        android:icon="@drawable/ic_search_black_24dp"
        />
    <item
        android:id="@+id/drugstores"
        android:title="@string/drugstore_nav"
        android:icon="@drawable/baseline_storefront_24" />


    <item
        android:id="@+id/record"
        android:title="@string/record_nav"
        android:icon="@drawable/ic_receipt_black_24dp" />

    <item
        android:id="@+id/user_manager"
        android:title="@string/user_manager_nav"
        android:icon="@drawable/ic_dns_black_24dp"
        />


    <item
        android:id="@+id/setting"
        android:title="@string/setting_nav"
        android:icon="@drawable/ic_account_circle_black_24dp" />

</menu>