<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.example.drugbank.base.customView.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:title="Company Info"
        app:layout_constraintTop_toTopOf="parent"
        app:showEndIcon="false"
        app:showShadow="true"
        app:showStartIcon="true"
        app:showStartText="true">
    </com.example.drugbank.base.customView.CustomToolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/im_company"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_normal"
            android:src="@drawable/dmc"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="150dp">
        </ImageView>

        <TextView
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/companyName"
            android:text="Công Ty Cổ Phần Dược Hậu Giang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="Head office location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/trusochih"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="@string/headGn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="Business location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/diadiemkinhdoanmh"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="@string/headGn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="Telephone: Fax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/telepphone"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="@string/tetlephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="Business type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/bsstye"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="@string/loaihinhkinhdoanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="Business registration certificate number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/registraio"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="77/BYT-ĐKKDD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:weightSum="10"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="6"
                android:text="GMP/GSP/GLP number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/gmp"
                android:textSize="15dp"
                android:layout_weight="4"
                android:text="@string/gmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>







    </LinearLayout>

</LinearLayout>