<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.example.drugbank.base.customView.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:title="Drug Info"
        app:layout_constraintTop_toTopOf="parent"
        app:showEndIcon="false"
        app:showShadow="true"
        app:showStartIcon="true"
        app:showStartText="true">
    </com.example.drugbank.base.customView.CustomToolbar>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:textStyle="bold"
                android:id="@+id/drugName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Andrenaline">
            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/drubBankId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID: 1">
                </TextView>

                <TextView
                    android:textSize="20dp"
                    android:textStyle="italic"
                    android:id="@+id/active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Active: True">
                </TextView>
            </LinearLayout>




            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Approval Status: ">
                    </TextView>

                    <TextView
                        android:textSize="18dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/approvalStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Type: ">
                    </TextView>

                    <TextView
                        android:textSize="18dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Capsule">
                    </TextView>
                </LinearLayout>
            </LinearLayout>






            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Simple Description: ">
                </TextView>
                <TextView
                    android:textSize="18dp"
                    android:id="@+id/simpleDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleSimpleDescription">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description: ">
                </TextView>
                <TextView
                    android:textSize="18dp"
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleDescription">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="State: ">
                </TextView>
                <TextView
                    android:textSize="18dp"

                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleState"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clinical Description: ">
                </TextView>
                <TextView
                    android:textSize="18dp"
                    android:id="@+id/clinicalDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleclinical">
                </TextView>
            </LinearLayout>












        </LinearLayout>
    </ScrollView>
</LinearLayout>